--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -24,14 +24,28 @@
             font-family: "Poppins", sans-serif;
         }
     </style>
+
+    <!-- Tailwind SetUP -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        'bike-primary': '#E76F51',
+                    }
+                }
+            }
+        }
+    </script>
 </head>
 
 <body class="font-poppins">
     <!-- Header Section -->
-    <header>
+    <header class="md:container mx-auto">
         <!-- Navigation Bar -->
         <div class="navbar bg-base-100">
-            <div class="navbar-start">
+            <div class="flex-1">
                 <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -45,21 +59,21 @@
                         <li><a>Home</a></li>
                         <li><a>Shop</a></li>
                         <li><a>News</a></li>
-                        <li><a>Contact</a></li>
+                        <li><a>Contact Us</a></li>
                     </ul>
                 </div>
-                <a class="btn btn-ghost text-xl">Biker Zone</a>
+                <a class="text-2xl md:text-4xl font-bold">Biker Zone</a>
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
-                    <li><a>Home</a></li>
-                    <li><a>Shop</a></li>
-                    <li><a>News</a></li>
-                    <li><a>Contact</a></li>
+                    <li class="font-medium text-base"><a>Home</a></li>
+                    <li class="font-medium text-base"><a>Shop</a></li>
+                    <li class="font-medium text-base"><a>News</a></li>
+                    <li class="font-medium text-base"><a>Contact Us</a></li>
                 </ul>
             </div>
-            <div class="navbar-end">
-                <a class="btn btn-error">Login</a>
+            <div class="">
+                <a class="btn btn-error bg-bike-primary text-white  px-8 md:px-12 font-medium text-base">Login</a>
             </div>
         </div>
     </header>
