--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
     </style>
 
-    <!-- Tailwind SetUP -->
+    <!-- Tailwind Config Setup -->
     <script>
         tailwind.config = {
             theme: {
@@ -33,6 +33,8 @@
                     colors: {
                         clifford: '#da373d',
                         'bike-primary': '#E76F51',
+                        'bike-primary-bg': 'rgba(231, 111, 81, 0.1)',
+                        'bike-secondary': 'rgba(0,0,0,0.6)',
                     }
                 }
             }
@@ -42,9 +44,9 @@
 
 <body class="font-poppins">
     <!-- Header Section -->
-    <header class="md:container mx-auto">
+    <header class="md:container mx-auto md:mt-5 md:mb-40">
         <!-- Navigation Bar -->
-        <div class="navbar bg-base-100">
+        <div class="navbar bg-base-100 md:mb-14">
             <div class="flex-1">
                 <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -56,24 +58,109 @@
                     </div>
                     <ul tabindex="0"
                         class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                        <li><a>Home</a></li>
-                        <li><a>Shop</a></li>
-                        <li><a>News</a></li>
-                        <li><a>Contact Us</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
-                <a class="text-2xl md:text-4xl font-bold">Biker Zone</a>
+                <a class="text-2xl md:text-4xl font-bold" href="#">Biker Zone</a>
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
-                    <li class="font-medium text-base"><a>Home</a></li>
-                    <li class="font-medium text-base"><a>Shop</a></li>
-                    <li class="font-medium text-base"><a>News</a></li>
-                    <li class="font-medium text-base"><a>Contact Us</a></li>
+                    <li class="font-medium text-base"><a href="#">Home</a></li>
+                    <li class="font-medium text-base"><a href="#">Shop</a></li>
+                    <li class="font-medium text-base"><a href="#">News</a></li>
+                    <li class="font-medium text-base"><a href="#">Contact Us</a></li>
                 </ul>
             </div>
-            <div class="">
-                <a class="btn btn-error bg-bike-primary text-white  px-8 md:px-12 font-medium text-base">Login</a>
+            <div>
+                <a class="btn btn-error bg-bike-primary text-white px-8 md:px-12 font-medium text-base"
+                    href="#">Login</a>
+            </div>
+        </div>
+
+        <!-- Slider Carousel -->
+        <div class="carousel w-full bg-bike-primary-bg">
+            <!-- Slide 1 -->
+            <div id="slide1" class="carousel-item relative w-full">
+                <div class="flex flex-col md:flex-row p-8 md:p-24">
+                    <!-- Text Content -->
+                    <div class="p-5 md:pr-10 flex-1">
+                        <h1 class="text-3xl md:text-6xl font-bold pb-5">
+                            Ride-on R15 V4
+                            <br>
+                            with Smile
+                        </h1>
+                        <p class="text-bike-secondary pb-7">Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                            do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button
+                            class="btn btn-error bg-bike-primary text-white px-8 md:px-12 font-medium text-base">Purchase</button>
+                    </div>
+
+                    <!-- Image Content -->
+                    <div class="flex-1">
+                        <img src="images/slider/bike1.png" alt="R15 V4 bike" class="w-full" />
+                    </div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+
+            <!-- Slide 2 -->
+            <div id="slide2" class="carousel-item relative w-full">
+                <div class="flex flex-col md:flex-row p-8 md:p-24">
+                    <!-- Text Content -->
+                    <div class="p-5 md:pr-10 flex-1">
+                        <h1 class="text-3xl md:text-6xl font-bold pb-5">
+                            Ride-on R15 V4
+                            <br>
+                            with Smile
+                        </h1>
+                        <p class="text-bike-secondary pb-7">Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                            do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button
+                            class="btn btn-error bg-bike-primary text-white px-8 md:px-12 font-medium text-base">Purchase</button>
+                    </div>
+
+                    <!-- Image Content -->
+                    <div class="flex-1">
+                        <img src="images/slider/bike2.png" alt="R15 V4 bike" class="w-full" />
+                    </div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+
+            <!-- Slide 3 -->
+            <div id="slide3" class="carousel-item relative w-full">
+                <div class="flex flex-col md:flex-row p-8 md:p-24">
+                    <!-- Text Content -->
+                    <div class="p-5 md:pr-10 flex-1">
+                        <h1 class="text-3xl md:text-6xl font-bold pb-5">
+                            Ride-on R15 V4
+                            <br>
+                            with Smile
+                        </h1>
+                        <p class="text-bike-secondary pb-7">Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                            do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button
+                            class="btn btn-error bg-bike-primary text-white px-8 md:px-12 font-medium text-base">Purchase</button>
+                    </div>
+
+                    <!-- Image Content -->
+                    <div class="flex-1">
+                        <img src="images/slider/bike3.png" alt="R15 V4 bike" class="w-full" />
+                    </div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
             </div>
         </div>
     </header>
