--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body class="font-poppins">
     <!-- Header Section -->
-    <header class="md:container mx-auto md:mt-5 md:mb-40">
+    <header class="md:container mx-auto md:mt-5 md:mb-40 mb-8">
         <!-- Navigation Bar -->
         <div class="navbar bg-base-100 md:mb-14">
             <div class="flex-1">
@@ -86,7 +86,7 @@
             <div id="slide1" class="carousel-item relative w-full">
                 <div class="flex flex-col md:flex-row p-8 md:p-24">
                     <!-- Text Content -->
-                    <div class="p-5 md:pr-10 flex-1">
+                    <div class="p-5 md:pr-10 flex-1 mb-6">
                         <h1 class="text-3xl md:text-6xl font-bold pb-5">
                             Ride-on R15 V4
                             <br>
@@ -167,9 +167,39 @@
 
     <!-- Main Section -->
     <main>
-        <!-- Your content here -->
-    </main>
+        <!-- Featured Bikes in this year Section -->
+        <section class="md:container mx-auto md:mb-28 p-6">
+            <div>
+                <!-- Text Section -->
+                <div class="text-center md:pb-12 pb-6">
+                    <h1 class="text-3xl md:text-5xl font-semibold mb-1">Featured Bikes in this year Section</h1>
+                    <p class="text-sm text-bike-primary font-semibold">Best Bikes Collection</p>
+                    <div class="flex justify-center">
+                        <hr class="border-1 border-bike-primary w-14">
+                    </div>
+                </div>
 
+                <!-- Image Section -->
+                <div class="flex justify-center md:justify-between">
+                    <!-- First Image-->
+                    <div class="hidden md:block grayscale">
+                        <img src="images/others/feature-bike.png" alt="Feature Bike 1">
+                    </div>
+
+                    <!-- Middle Image-->
+                    <div>
+                        <img src="images/others/feature-bike.png" alt="Feature Bike 2">
+                    </div>
+
+                    <!-- Third Image -->
+                    <div class="hidden md:block grayscale">
+                        <img src="images/others/feature-bike.png" alt="Feature Bike 3">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    
     <!-- Footer Section -->
     <footer>
         <!-- Your content here -->
